--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend da aplicação Floricultura refatorada com Node.js",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run lint:fix && npm run format && node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
