Implementa Prisma ORM com Docker Compose e seed data

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
 PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=legacy_ap
+DATABASE_URL="mysql://user:password@mysql:3306/legacy_ap"
+SHADOW_DATABASE_URL="mysql://root:root_password@mysql:3306/legacy_ap"
 JWT_SECRET=floricultura_secret_key_2023
