--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,3 @@
 PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=legacy_ap
+DATABASE_URL="mysql://user:password@localhost:3306/legacy_ap"
+JWT_SECRET=your_secret_key_here
