--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
 PORT=5000
-DATABASE_URL="mysql://user:password@mysql:3306/legacy_ap"
-SHADOW_DATABASE_URL="mysql://root:root_password@mysql:3306/legacy_ap"
+DATABASE_URL="mysql://root:root@localhost:3306/legacy_ap"
 JWT_SECRET=floricultura_secret_key_2023
