--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-PORT=5000
 DATABASE_URL="mysql://root:root@localhost:3306/legacy_ap"
-JWT_SECRET=floricultura_secret_key_2023
+SHADOW_DATABASE_URL="mysql://root:root@localhost:3306/legacy_ap_shadow"
+PORT=3000
+JWT_SECRET="sua_chave_secreta_muito_segura_aqui"
