--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "start": "npm run lint:fix && npm run format && node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config ../tests/jest.config.backend.js",
+    "test:unit": "jest \"../tests/backend/unit/**/*.test.js\"",
+    "test:integration": "jest \"../tests/backend/integration/**/*.test.js\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"**/*.{js,json}\""
+    "format": "prettier --write \"**/*.{js,json}\" \"*.js\"",
+    "format:js": "prettier --write \"**/*.js\" \"*.js\"",
+    "format:json": "prettier --write \"**/*.json\"",
+    "format:controllers": "prettier --write \"controllers/**/*.js\"",
+    "format:models": "prettier --write \"models/**/*.js\"",
+    "format:routes": "prettier --write \"routes/**/*.js\"",
+    "format:config": "prettier --write \"*.js\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,10 +28,13 @@
     "mysql2": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7"
+    "jest": "^29.7.0",
+    "mongoose": "^8.15.1",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
+    "supertest": "^7.1.1"
   }
 }
