--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
-DATABASE_URL="mysql://root:root@localhost:3306/legacy_ap"
-SHADOW_DATABASE_URL="mysql://root:root@localhost:3306/legacy_ap_shadow"
+DATABASE_URL="mysql://root:12345@localhost:3306/legacy_ap"
 PORT=3000
 JWT_SECRET="sua_chave_secreta_muito_segura_aqui"
