--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="mysql://root:12345@localhost:3306/legacy_ap"
-PORT=3000
-JWT_SECRET="sua_chave_secreta_muito_segura_aqui"
+PORT=5000
+DATABASE_URL="mysql://root:753951@localhost:3306/legacy_ap"
+SHADOW_DATABASE_URL="mysql://root:753951@localhost:3306/legacy_ap_shadow"
+JWT_SECRET=floricultura_secret_key_2024
